# app/interface/handler/dto.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  /home/docs/openapi.yml
-#   timestamp: 2023-05-06T14:35:46+00:00
+#   timestamp: 2023-05-07T05:01:26+00:00
 
 from __future__ import annotations
 
@@ -13,25 +13,6 @@ from pydantic import BaseModel, Field, constr
 
 class BaseUser(BaseModel):
     id: UUID = Field(..., description='ユーザID')
-
-
-class Affiliate(BaseModel):
-    id: UUID = Field(..., description='加盟組織ID')
-    name: constr(max_length=255) = Field(..., description='組織名', example='株式会社サンプル')
-    postcode: constr(max_length=8) = Field(..., description='郵便番号', example='000-0000')
-    address: constr(max_length=255) = Field(
-        ..., description='住所', example='静岡県沼津市上土町36'
-    )
-    tel: constr(max_length=13) = Field(..., description='電話番号', example='000-0000-0000')
-    fax: Optional[constr(max_length=13)] = Field(
-        None, description='FAX番号', example='000-0000-0000'
-    )
-    email: Optional[constr(max_length=255)] = Field(
-        None, description='メールアドレス', example='sample@sample.com'
-    )
-    created_at: datetime = Field(..., description='作成日')
-    updated_at: datetime = Field(..., description='更新日')
-    users: Optional[List[BaseUser]] = None
 
 
 class Item(BaseModel):
@@ -50,6 +31,10 @@ class Item(BaseModel):
     sales_end: Optional[datetime] = Field(None, description='作成日')
     created_at: datetime = Field(..., description='作成日')
     updated_at: datetime = Field(..., description='更新日')
+
+
+class BaseOrder(BaseModel):
+    id: UUID = Field(..., description='注文ID')
 
 
 class CreateUserRequest(BaseModel):
@@ -146,6 +131,48 @@ class UpdateItemRequest(BaseModel):
     sales_end: Optional[datetime] = Field(None, description='作成日')
 
 
+class CreateOrderRequest(BaseModel):
+    postcode: constr(max_length=8) = Field(
+        ..., description='届け先郵便番号', example='000-0000'
+    )
+    address: constr(max_length=255) = Field(
+        ..., description='届け先住所', example='静岡県沼津市上土町36'
+    )
+    approved_flag: Optional[bool] = Field(False, description='承認フラグ', example=False)
+    affiliate_id: UUID = Field(..., description='加盟組織ID')
+    user_id: UUID = Field(..., description='ユーザID')
+
+
+class UpdateOrderRequest(BaseModel):
+    postcode: Optional[constr(max_length=8)] = Field(
+        None, description='届け先郵便番号', example='000-0000'
+    )
+    address: Optional[constr(max_length=255)] = Field(
+        None, description='届け先住所', example='静岡県沼津市上土町36'
+    )
+    approved_flag: Optional[bool] = Field(False, description='承認フラグ', example=False)
+
+
+class Affiliate(BaseModel):
+    id: UUID = Field(..., description='加盟組織ID')
+    name: constr(max_length=255) = Field(..., description='組織名', example='株式会社サンプル')
+    postcode: constr(max_length=8) = Field(..., description='郵便番号', example='000-0000')
+    address: constr(max_length=255) = Field(
+        ..., description='住所', example='静岡県沼津市上土町36'
+    )
+    tel: constr(max_length=13) = Field(..., description='電話番号', example='000-0000-0000')
+    fax: Optional[constr(max_length=13)] = Field(
+        None, description='FAX番号', example='000-0000-0000'
+    )
+    email: Optional[constr(max_length=255)] = Field(
+        None, description='メールアドレス', example='sample@sample.com'
+    )
+    created_at: datetime = Field(..., description='作成日')
+    updated_at: datetime = Field(..., description='更新日')
+    users: Optional[List[BaseUser]] = None
+    orders: Optional[List[BaseOrder]] = None
+
+
 class User(BaseModel):
     id: UUID = Field(..., description='ユーザID')
     first_name: constr(max_length=255) = Field(..., description='名', example='太郎')
@@ -157,3 +184,17 @@ class User(BaseModel):
     created_at: datetime = Field(..., description='作成日')
     updated_at: datetime = Field(..., description='更新日')
     affiliate: Optional[Affiliate] = None
+    orders: Optional[List[BaseOrder]] = None
+
+
+class Order(BaseModel):
+    id: UUID = Field(..., description='注文ID')
+    postcode: constr(max_length=8) = Field(
+        ..., description='届け先郵便番号', example='000-0000'
+    )
+    address: constr(max_length=255) = Field(
+        ..., description='届け先住所', example='静岡県沼津市上土町36'
+    )
+    approved_flag: bool = Field(..., description='承認フラグ', example=False)
+    affiliate: Affiliate
+    user: User
