# app/main.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yml
-#   timestamp: 2023-05-06T14:35:46+00:00
+#   timestamp: 2023-05-07T05:01:26+00:00
 
 from __future__ import annotations
 
@@ -17,9 +17,13 @@ from interface.handler.dto import (
     Affiliate,
     CreateAffiliateRequest,
     CreateItemRequest,
+    CreateOrderRequest,
     CreateUserRequest,
     Item,
+    Order,
     UpdateAffiliateRequest,
+    UpdateItemRequest,
+    UpdateOrderRequest,
     UpdateUserRequest,
     User,
 )
@@ -36,15 +40,20 @@ db = SessionLocal()
 userRepository = UserRepository(db)
 affiliateRepository = AffiliateRepository(db)
 itemRepository = ItemRepository(db)
+orderRepository = OrderRepository(db)
 # service
 # usecase
 userUsecase = UserUsecase(userRepository, affiliateRepository)
 affiliateUsecase = AffiliateUsecase(affiliateRepository)
 itemUsecase = ItemUsecase(itemRepository)
+orderUsecase = OrderUsecase(
+    orderRepository, affiliateRepository, userRepository
+)
 # handler
 userHandler = UserHandler(userUsecase)
 affiliateHandler = AffiliateHandler(affiliateUsecase)
 itemHandler = ItemHandler(itemUsecase)
+orderHandler = OrderHandler(orderUsecase)
 
 
 @app.get('/affiliates', response_model=List[Affiliate], tags=['Affiliate'])
@@ -103,7 +112,7 @@ async def get_items_item_id(item_id: UUID) -> Item:
 
 
 @app.put('/items/{item_id}', response_model=None, tags=['Item'])
-async def put_items_item_id(item_id: UUID, body: UpdateUserRequest = ...) -> None:
+async def put_items_item_id(item_id: UUID, body: UpdateItemRequest = ...) -> None:
     return itemHandler.put_items_item_id(
         item_id=item_id,
         body=body,
@@ -114,6 +123,40 @@ async def put_items_item_id(item_id: UUID, body: UpdateUserRequest = ...) -> Non
 async def delete_items_item_id(item_id: UUID) -> None:
     return itemHandler.delete_items_item_id(
         item_id=item_id,
+    )
+
+
+@app.get('/orders', response_model=List[Order], tags=['Order'])
+async def get_orders() -> List[Order]:
+    return orderHandler.get_orders()
+
+
+@app.post('/orders', response_model=None, tags=['Order'])
+async def post_orders(body: CreateOrderRequest) -> None:
+    return orderHandler.post_orders(
+        body=body,
+    )
+
+
+@app.get('/orders/{order_id}', response_model=Order, tags=['Order'])
+async def get_orders_order_id(order_id: UUID) -> Order:
+    return orderHandler.get_orders_order_id(
+        order_id=order_id,
+    )
+
+
+@app.put('/orders/{order_id}', response_model=None, tags=['Order'])
+async def put_orders_order_id(order_id: UUID, body: UpdateOrderRequest = ...) -> None:
+    return orderHandler.put_orders_order_id(
+        order_id=order_id,
+        body=body,
+    )
+
+
+@app.delete('/orders/{order_id}', response_model=None, tags=['Order'])
+async def delete_orders_order_id(order_id: UUID) -> None:
+    return orderHandler.delete_orders_order_id(
+        order_id=order_id,
     )
 
 
