# docs/openapi.yml
@@ -6,6 +6,7 @@ tags:
   - name: User
   - name: Affiliate
   - name: Item
+  - name: Order
 servers:
   - url: http://localhost:8000
 paths:
@@ -243,6 +244,84 @@ paths:
       responses:
         "200":
           description: Success
+  /orders:
+    get:
+      tags:
+        - Order
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Order"
+    post:
+      tags:
+        - Order
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              $ref: "#/components/schemas/CreateOrderRequest"
+      responses:
+        "200":
+          description: Success
+  /orders/{order_id}:
+    get:
+      tags:
+        - Order
+      parameters:
+        - in: path
+          name: order_id
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: "#/components/schemas/Order"
+    put:
+      tags:
+        - Order
+      parameters:
+        - in: path
+          name: order_id
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              $ref: "#/components/schemas/UpdateOrderRequest"
+      responses:
+        "200":
+          description: Success
+    delete:
+      tags:
+        - Order
+      parameters:
+        - in: path
+          name: order_id
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Success
 
 components:
   schemas:
@@ -302,6 +381,11 @@ components:
           allOf:
             - "$ref": "#/components/schemas/Affiliate"
             - x-backref: users
+        orders:
+          readOnly: True
+          type: array
+          items:
+            $ref: "#/components/schemas/BaseOrder"
       required:
         - id
         - first_name
@@ -365,6 +449,11 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/BaseUser"
+        orders:
+          readOnly: True
+          type: array
+          items:
+            $ref: "#/components/schemas/BaseOrder"
       required:
         - id
         - name
@@ -436,6 +525,66 @@ components:
         - unit_price
         - created_at
         - updated_at
+    BaseOrder:
+      type: object
+      description: 注文(Base)
+      properties:
+        id:
+          type: string
+          maxLength: 36
+          format: uuid
+          description: 注文ID
+      required:
+        - id
+    Order:
+      type: object
+      description: 注文
+      x-tablename: orders
+      properties:
+        id:
+          type: string
+          maxLength: 36
+          format: uuid
+          description: 注文ID
+          x-primary-key: true
+        postcode:
+          type: string
+          maxLength: 8
+          description: 届け先郵便番号
+          example: 000-0000
+        address:
+          type: string
+          maxLength: 255
+          description: 届け先住所
+          example: 静岡県沼津市上土町36
+        approved_flag:
+          type: boolean
+          description: 承認フラグ
+          default: false
+          example: false
+        # ordered_datetime:
+        #   type: string
+        #   format: date-time
+        #   description: 注文日時
+        # approved_datetime:
+        #   type: string
+        #   format: date-time
+        #   description: 承認日時
+        affiliate:
+          allOf:
+            - "$ref": "#/components/schemas/Affiliate"
+            - x-backref: orders
+        user:
+          allOf:
+            - "$ref": "#/components/schemas/User"
+            - x-backref: orders
+      required:
+        - id
+        - postcode
+        - address
+        - approved_flag
+        - affiliate
+        - user
     CreateUserRequest:
       type: object
       properties:
@@ -636,3 +785,72 @@ components:
           type: string
           format: date-time
           description: 作成日
+    CreateOrderRequest:
+      type: object
+      description: 注文
+      properties:
+        postcode:
+          type: string
+          maxLength: 8
+          description: 届け先郵便番号
+          example: 000-0000
+        address:
+          type: string
+          maxLength: 255
+          description: 届け先住所
+          example: 静岡県沼津市上土町36
+        approved_flag:
+          type: boolean
+          description: 承認フラグ
+          default: false
+          example: false
+        # ordered_datetime:
+        #   type: string
+        #   format: date-time
+        #   description: 注文日時
+        # approved_datetime:
+        #   type: string
+        #   format: date-time
+        #   description: 承認日時
+        affiliate_id:
+          type: string
+          maxLength: 36
+          format: uuid
+          description: 加盟組織ID
+        user_id:
+          type: string
+          maxLength: 36
+          format: uuid
+          description: ユーザID
+      required:
+        - postcode
+        - address
+        - affiliate_id
+        - user_id
+    UpdateOrderRequest:
+      type: object
+      description: 注文
+      properties:
+        postcode:
+          type: string
+          maxLength: 8
+          description: 届け先郵便番号
+          example: 000-0000
+        address:
+          type: string
+          maxLength: 255
+          description: 届け先住所
+          example: 静岡県沼津市上土町36
+        approved_flag:
+          type: boolean
+          description: 承認フラグ
+          default: false
+          example: false
+        # ordered_datetime:
+        #   type: string
+        #   format: date-time
+        #   description: 注文日時
+        # approved_datetime:
+        #   type: string
+        #   format: date-time
+        #   description: 承認日時
